WordService: create and update functionalities .#43